remove queue object and reduce task stack size

--- a/NUCLEO-F103RB_SeedAndKey_DRNG_AES128/NUCLEO-F103RB_SeedAndKey_DRNG_AES128.ioc
+++ b/NUCLEO-F103RB_SeedAndKey_DRNG_AES128/NUCLEO-F103RB_SeedAndKey_DRNG_AES128.ioc
@@ -6,9 +6,9 @@ FREERTOS.BinarySemaphores01=requestSeedBinarySem,Dynamic,NULL,Depleted;sendKeyBi
 FREERTOS.FootprintOK=true
 FREERTOS.HEAP_NUMBER=4
 FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,FootprintOK,BinarySemaphores01,Queues01,configTOTAL_HEAP_SIZE,HEAP_NUMBER
-FREERTOS.Queues01=outputQueue,2,MsgQueue_Obj_t,0,Dynamic,NULL,NULL
+FREERTOS.Queues01=outputQueue,2,33,1,Dynamic,NULL,NULL
 FREERTOS.Tasks01=serialTask,24,256,SerialTask,Default,NULL,Dynamic,NULL,NULL;requestSeedTask,24,256,RequestSeedTask,Default,NULL,Dynamic,NULL,NULL;compareKeyTask,24,256,CompareKeyTask,Default,NULL,Dynamic,NULL,NULL
-FREERTOS.configTOTAL_HEAP_SIZE=8192
+FREERTOS.configTOTAL_HEAP_SIZE=10000
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 KeepUserPlacement=false
@@ -63,12 +63,12 @@ NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
-PA13.Mode=Serial_Wire
+PA13.Mode=Trace_Asynchronous_SW
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.GPIOParameters=GPIO_Label
 PA14.GPIO_Label=TCK
 PA14.Locked=true
-PA14.Mode=Serial_Wire
+PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=SYS_JTCK-SWCLK
 PA2.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA2.GPIO_Label=USART_TX
@@ -96,6 +96,7 @@ PA5.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
+PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-TRACESWO
 PC13-TAMPER-RTC.GPIOParameters=GPIO_PuPd,GPIO_Label
 PC13-TAMPER-RTC.GPIO_Label=B1 [Blue PushButton]
@@ -136,8 +137,8 @@ ProjectManager.MainLocation=Core/Src
 ProjectManager.NoMain=false
 ProjectManager.PreviousToolchain=STM32CubeIDE
 ProjectManager.ProjectBuild=false
-ProjectManager.ProjectFileName=NUCLEO-F103RB_FreeRTOS_CMSIS.ioc
-ProjectManager.ProjectName=NUCLEO-F103RB_FreeRTOS_CMSIS
+ProjectManager.ProjectFileName=NUCLEO-F103RB_SeedAndKey_DRNG_AES128.ioc
+ProjectManager.ProjectName=NUCLEO-F103RB_SeedAndKey_DRNG_AES128
 ProjectManager.ProjectStructure=
 ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
@@ -146,7 +147,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true,4-MX_CRC_Init-CRC-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART2_UART_Init-USART2-false-HAL-true
 RCC.ADCFreqValue=32000000
 RCC.AHBFreq_Value=64000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
